feat(rest): GET /index
